--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
-    <!-- Stuff goes here -->
+    <div id='app'>
+      <!-- Stuff goes here -->
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
